# xdg-desktop-portal-gtk4

./: .gitignore  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
data/: gtk4.portal  org.freedesktop.impl.portal.desktop.gtk4.service.in  xdg-desktop-portal-gtk4.desktop.in  xdg-desktop-portal-gtk4.service.in
locales/: t.yml
src/: cli.rs  gui.rs  logging.rs  main.rs  portal.rs  utils.rs
src/gui/: file_chooser.rs
src/portal/: portals.rs  request.rs  response.rs
src/portal/portals/: file_chooser.rs
src/utils/: file_chooser_ext.rs
