[package]
name = "xdg-desktop-portal-gtk4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-channel = "2.3.1"
bstr = "1.10.0"
clap = { version = "4.5.17", features = ["derive"] }
current_locale = "0.1.1"
env_logger = "0.11.5"
error_reporter = "1.0.0"
futures-util = "0.3.30"
gdk4-wayland = "0.9.1"
gtk4 = "0.9.1"
language-tags = "0.3.2"
libc = "0.2.158"
log = "0.4.22"
rand = "0.8.5"
rust-i18n = "3.1.2"
serde = "1.0.210"
thiserror = "1.0.63"
url = { version = "2.5.2", features = ["serde"] }
zbus = { version = "4.4.0", features = ["blocking"] }

[package.metadata.i18n]
available-locales = [
    "en",
    "be",
    "ca",
    "cs",
    "da",
    "de",
    "es",
    "fr",
    "gl",
    "he",
    "hi",
    "hr",
    "hu",
    "id",
    "ie",
    "it",
    "ja",
    "ka",
    "lt",
    "nl",
    "oc",
    "pl",
    "pt",
    "ru",
    "sk",
    "sl",
    "sr",
    "sv",
    "tr",
    "uk",
    "zh",
]
default-locale = "en"
load-path = "locales"
